## Makefile.am for tuxmath data/images/status:
## Process with AutoMake:

EXTRA_DIST = 	demo.png	\
	demo-small.png	\
	gameover.png	\
	gameover_won.png	\
	keypad_no_neg.png	\
	keypad.png	\
	led_neg_sign.png	\
	lednums.png	\
	left_gray.png	\
	left.png	\
	loading.png	\
	nbs.png	\
	numbers.png	\
	nums.png	\
	paused.png	\
	right_gray.png	\
	right.png	\
	score.png	\
	standby.png	\
	stop.png	\
	title.png	\
	tux4kids.png	\
	wave.png

install-data-local:
	$(MKDIR_P) $(DESTDIR)$(prefix)/share/$(PACKAGE)/images/status

	$(INSTALL_DATA) $(srcdir)/demo.png  $(DESTDIR)$(prefix)/share/$(PACKAGE)/images/status
	$(INSTALL_DATA) $(srcdir)/demo-small.png  $(DESTDIR)$(prefix)/share/$(PACKAGE)/images/status
	$(INSTALL_DATA) $(srcdir)/gameover.png  $(DESTDIR)$(prefix)/share/$(PACKAGE)/images/status
	$(INSTALL_DATA) $(srcdir)/gameover_won.png  $(DESTDIR)$(prefix)/share/$(PACKAGE)/images/status
	$(INSTALL_DATA) $(srcdir)/keypad_no_neg.png  $(DESTDIR)$(prefix)/share/$(PACKAGE)/images/status
	$(INSTALL_DATA) $(srcdir)/keypad.png  $(DESTDIR)$(prefix)/share/$(PACKAGE)/images/status
	$(INSTALL_DATA) $(srcdir)/led_neg_sign.png  $(DESTDIR)$(prefix)/share/$(PACKAGE)/images/status
	$(INSTALL_DATA) $(srcdir)/lednums.png  $(DESTDIR)$(prefix)/share/$(PACKAGE)/images/status
	$(INSTALL_DATA) $(srcdir)/left_gray.png  $(DESTDIR)$(prefix)/share/$(PACKAGE)/images/status
	$(INSTALL_DATA) $(srcdir)/left.png  $(DESTDIR)$(prefix)/share/$(PACKAGE)/images/status
	$(INSTALL_DATA) $(srcdir)/loading.png  $(DESTDIR)$(prefix)/share/$(PACKAGE)/images/status
	$(INSTALL_DATA) $(srcdir)/nbs.png  $(DESTDIR)$(prefix)/share/$(PACKAGE)/images/status
	$(INSTALL_DATA) $(srcdir)/numbers.png  $(DESTDIR)$(prefix)/share/$(PACKAGE)/images/status
	$(INSTALL_DATA) $(srcdir)/nums.png  $(DESTDIR)$(prefix)/share/$(PACKAGE)/images/status
	$(INSTALL_DATA) $(srcdir)/paused.png  $(DESTDIR)$(prefix)/share/$(PACKAGE)/images/status
	$(INSTALL_DATA) $(srcdir)/right_gray.png  $(DESTDIR)$(prefix)/share/$(PACKAGE)/images/status
	$(INSTALL_DATA) $(srcdir)/right.png  $(DESTDIR)$(prefix)/share/$(PACKAGE)/images/status
	$(INSTALL_DATA) $(srcdir)/score.png  $(DESTDIR)$(prefix)/share/$(PACKAGE)/images/status
	$(INSTALL_DATA) $(srcdir)/standby.png  $(DESTDIR)$(prefix)/share/$(PACKAGE)/images/status
	$(INSTALL_DATA) $(srcdir)/stop.png  $(DESTDIR)$(prefix)/share/$(PACKAGE)/images/status
	$(INSTALL_DATA) $(srcdir)/title.png  $(DESTDIR)$(prefix)/share/$(PACKAGE)/images/status
	$(INSTALL_DATA) $(srcdir)/tux4kids.png  $(DESTDIR)$(prefix)/share/$(PACKAGE)/images/status
	$(INSTALL_DATA) $(srcdir)/wave.png  $(DESTDIR)$(prefix)/share/$(PACKAGE)/images/status

uninstall-local:
	rm -f $(DESTDIR)$(prefix)/share/$(PACKAGE)/images/status/demo.png	
	rm -f $(DESTDIR)$(prefix)/share/$(PACKAGE)/images/status/demo-small.png	
	rm -f $(DESTDIR)$(prefix)/share/$(PACKAGE)/images/status/gameover.png	
	rm -f $(DESTDIR)$(prefix)/share/$(PACKAGE)/images/status/gameover_won.png
	rm -f $(DESTDIR)$(prefix)/share/$(PACKAGE)/images/status/keypad_no_neg.png
	rm -f $(DESTDIR)$(prefix)/share/$(PACKAGE)/images/status/keypad.png	
	rm -f $(DESTDIR)$(prefix)/share/$(PACKAGE)/images/status/led_neg_sign.png
	rm -f $(DESTDIR)$(prefix)/share/$(PACKAGE)/images/status/lednums.png	
	rm -f $(DESTDIR)$(prefix)/share/$(PACKAGE)/images/status/left_gray.png	
	rm -f $(DESTDIR)$(prefix)/share/$(PACKAGE)/images/status/left.png	
	rm -f $(DESTDIR)$(prefix)/share/$(PACKAGE)/images/status/loading.png	
	rm -f $(DESTDIR)$(prefix)/share/$(PACKAGE)/images/status/nbs.png	
	rm -f $(DESTDIR)$(prefix)/share/$(PACKAGE)/images/status/numbers.png	
	rm -f $(DESTDIR)$(prefix)/share/$(PACKAGE)/images/status/nums.png	
	rm -f $(DESTDIR)$(prefix)/share/$(PACKAGE)/images/status/paused.png	
	rm -f $(DESTDIR)$(prefix)/share/$(PACKAGE)/images/status/play.png	
	rm -f $(DESTDIR)$(prefix)/share/$(PACKAGE)/images/status/right_gray.png	
	rm -f $(DESTDIR)$(prefix)/share/$(PACKAGE)/images/status/right.png	
	rm -f $(DESTDIR)$(prefix)/share/$(PACKAGE)/images/status/score.png	
	rm -f $(DESTDIR)$(prefix)/share/$(PACKAGE)/images/status/standby.png	
	rm -f $(DESTDIR)$(prefix)/share/$(PACKAGE)/images/status/stop.png	
	rm -f $(DESTDIR)$(prefix)/share/$(PACKAGE)/images/status/title.png	
	rm -f $(DESTDIR)$(prefix)/share/$(PACKAGE)/images/status/tux4kids.png	
	rm -f $(DESTDIR)$(prefix)/share/$(PACKAGE)/images/status/wave.png
	rm -rf $(DESTDIR)$(prefix)/share/$(PACKAGE)/images/status
