## Makefile.am for tuxmath data/images/status:
## Process with AutoMake:

statusdir = $(pkgdatadir)/images/status

dist_status_DATA = demo.png \
  demo-small.png \
  gameover.png \
  gameover_won.png \
  keypad_no_neg.png \
  keypad.png \
  led_neg_sign.png \
  lednums.png \
  left_gray.png \
  left.png \
  loading.png \
  nbs.png \
  numbers.png \
  nums.png \
  paused.png \
  right_gray.png \
  right.png \
  score.png \
  standby.png \
  stop.png \
  title.png \
  tux4kids.png \
  wave.png
