## Process with AutoMake:

statusdir = $(pkgdatadir)/images/status

dist_status_DATA = arrows.png \
  player_play.svg \
  demo.png \
  demo-small.png \
  gameover.png \
  gameover_won.png \
  keypad_no_neg.png \
  keypad.png \
  led_neg_sign.png \
  lednums.png \
  left_gray.png \
  left.png \
  left_gray.svg \
  left.svg \
  loading.png \
  nbs.png \
  numbers.png \
  nums.png \
  paused.png \
  right_gray.png \
  right.png \
  right_gray.svg \
  right.svg \
  score.png \
  standby.png \
  stop.png \
  stop.svg \
  title.png \
  tux4kids.png \
  tux4kids.svg \
  player_pause.svg \
  wave.png
